# the_social_network

./: .gitignore  .gitmodules  docker-compose.yml
backend/: Cargo.toml  backend.Dockerfile
backend/src/: main.rs  routes.rs  server.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile
frontend/src/: main.rs
frontend/src-tauri/: Cargo.toml  debug-conf.el  tauri.conf.json
frontend/src-tauri/src/: channel.rs  main.rs
frontend/ui/: index.html  style.css
frontend/ui/ts/: GenIcon.js  PostMessage.js  RecieveMessage.js
