[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource = { version = "0.5.0" }
reqwest = { version = "0.11.24" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
